# cosmic-hotcorners

./: .gitignore  Cargo.toml  LICENSE  README.md  io.github.cosmic-hot-corners.yml  justfile
i18n/en/: cosmic_hot_corners.ftl
resources/: app.desktop  app.metainfo.xml  io.github.cosmic-hot-corners.desktop  io.github.cosmic-hot-corners.settings.desktop
src/: app.rs  config.rs  main.rs  settings_app.rs
